# Dandelion

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONVENTIONS.md  README.md  REVIEW.md  pyproject.toml  requirements-dev.txt  requirements.txt  scenarios.xlsx
availability_model/: DECISIONS.md  README.md  config.yaml  pyproject.toml
availability_model/availability_model/: __init__.py  cli.py  config.py  meta.py  pipeline.py
availability_model/availability_model/calibration/: __init__.py  common_mode.py  derating.py  forced.py  inflows.py  model.py  planned.py
availability_model/availability_model/io/: __init__.py  assumptions.py  cache.py  fleet.py  outages.py  production.py  schemas.py  weather.py
availability_model/availability_model/projection/: __init__.py  common_mode.py  derating.py  engine.py  forced.py  hydro.py  interconnectors.py  planned_scheduler.py
availability_model/availability_model/validation/: __init__.py  report.py  suite.py
availability_model/reports/: methodology.md
availability_model/tests/: conftest.py  test_calibration.py  test_outages.py  test_planned_scheduler.py  test_projection.py  test_smoke.py  test_stochastic.py  test_validation.py  test_weather_pieces.py
demand_model/: .gitignore  DECISIONS.md  METHODOLOGY.md  README.md  config.yaml  pyproject.toml
demand_model/demand_model/: __init__.py  cli.py  config.py  pipeline.py
demand_model/demand_model/calibration/: __init__.py  design.py  fit.py  model.py
demand_model/demand_model/features/: __init__.py  build.py  calendar.py  irradiance.py  temperature.py
demand_model/demand_model/io/: __init__.py  assumptions.py  loaders.py  qc.py  schemas.py
demand_model/demand_model/projection/: __init__.py  bottomup.py  drivers.py  engine.py  heatpump.py  weather.py
demand_model/demand_model/residual/: __init__.py  model.py
demand_model/demand_model/stochastic/: __init__.py
demand_model/demand_model/validation/: __init__.py  suite.py
demand_model/tests/: test_calibration.py  test_features.py  test_heatpump.py  test_io.py  test_projection.py  test_residual.py  test_smoke.py  test_validation.py
dispatch_model/: DECISIONS.md  METHODOLOGY.md  STEP_VII_METHODOLOGY.md  config.yaml  pyproject.toml
dispatch_model/dispatch_model/: __init__.py  cli.py  config.py  markup.py  meta.py  neighbour_availability.py  pipeline.py  price_metrics.py  res_schemes.py  rules.py  scheme_evolution.py  tyndp.py  weather_shapes.py
dispatch_model/dispatch_model/commodities/: __init__.py  gas_rules.py  model.py  observed.py  public_sources.py  resolve.py
dispatch_model/dispatch_model/hydro/: __init__.py  bellman.py  guide_curves.py  synthesis.py  water_value.py
dispatch_model/dispatch_model/io/: __init__.py  cache.py  entsoe_hist.py  fr_fleet.py  fr_history.py  schemas.py
dispatch_model/dispatch_model/lp/: __init__.py  diagnostics.py  highs_solver.py  multi_zone.py  single_zone.py
dispatch_model/dispatch_model/neighbours/: __init__.py  blocks.py
dispatch_model/tests/: test_bellman.py  test_commodities.py  test_de_unit_stack.py  test_fr_stack.py  test_fr_stack_vintage.py  test_hydro.py  test_lp.py  test_markup.py  test_montecarlo.py  test_multizone.py  test_neighbour_availability.py  test_neighbours.py  test_ntc_floor.py  test_nuclear_curve.py  test_price_metrics.py  test_projection.py  test_res_schemes.py  test_rules.py  test_scheme_evolution.py  test_sensitivity.py  test_smoke.py  test_structural.py  test_surrogate_crf.py  test_surrogate_features.py  test_surrogate_model.py  test_synthesis.py  test_tyndp.py  test_water_value.py  test_weather_shapes.py
powersim_core/: __init__.py  cache.py  catalog.py  glossary.py  lake.py  meta.py  pyproject.toml  registry.py  rng.py  scenario.py  schemas.py  serialize.py  time_grid.py  units.py  weather_cube.py
powersim_core/tests/: test_core.py  test_lake.py  test_registry.py  test_scenario.py  test_serialize.py
pricemodeling/: __init__.py  __main__.py  config.py  db.py  pipeline.py  pyproject.toml  qc.py
pricemodeling/entsoe/: __init__.py  prices.py  series.py  unavailability.py
pricemodeling/merge/: __init__.py  build_master.py
pricemodeling/meteo/: __init__.py  stations.py  synop.py
pricemodeling/reconcile/: __init__.py  unit_overrides.yaml  units.py
pricemodeling/registries/: cohort.py  download.py  mastr.py  odre.py  opsd.py  repd.py
pricemodeling/rte/: __init__.py  auth.py  catalog.py  client.py  extract.py
res_model/: DECISIONS.md  METHODOLOGY.md  README.md  config.yaml  pyproject.toml
res_model/res_model/: __init__.py  cli.py  config.py  meta.py  pipeline.py
res_model/scripts/: ingest_era5_db.py  pull_era5.py
res_model/tests/: test_calibration.py  test_conversion.py  test_io.py  test_projection.py  test_smoke.py  test_stochastic.py  test_transfer.py  test_validation.py
weathergen/: .gitignore  DECISIONS.md  README.md  WIND_TEMP_COUPLING.md  config.yaml  pyproject.toml
weathergen/scripts/: fit_wind100.py  phase2_diagnostics.py  phase4_diagnostics.py  phase5_diagnostics.py  phase6_diagnostics.py  refit_extended.py  resim_validate.py  trend_comparison.py
weathergen/tests/: test_climatology.py  test_dependence.py  test_era5_cds.py  test_io_qc.py  test_marginals.py  test_smoke.py  test_transforms.py  test_trend.py  test_wind100.py
weathergen/weathergen/: __init__.py  _cube.py  _synthetic.py  cli.py  climatology.py  cmip6_cds.py  config.py  dependence.py  era5_arco.py  era5_cds.py  io.py  marginals.py  model.py  simulate.py  transforms.py  trend.py  validate.py  wind100.py
(+65 files in other folders)
