[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demand_model"
version = "0.1.0"
description = "Hybrid statistical-structural long-term hourly power-demand model for mainland France."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyarrow>=14",          # parquet
    "pyyaml>=6.0",
    "pydantic>=2.5",        # config
    "pandera>=0.18",        # data contracts
    "pvlib>=0.10",          # clear-sky irradiance
    "workalendar>=17",      # FR public holidays
    "openpyxl>=3.1",        # assumptions workbook
]

[project.optional-dependencies]
calib = ["pygam>=0.9", "statsmodels>=0.14"]     # calibration / residual model
viz = ["matplotlib>=3.8", "jinja2>=3.1"]
dev = ["pytest>=8.0"]

[project.scripts]
demand-model = "demand_model.cli:main"

[tool.setuptools.packages.find]
include = ["demand_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
