[project]
name = "powersim-core"
version = "0.1.0"
description = "Shared library for the powersim price-modelling pipeline (glossary, time grid, RNG, weather cube, metadata)."
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "xarray", "pyarrow", "duckdb", "pandera"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["powersim_core*"]
