[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pricemodeling"
version = "0.1.0"
description = "Shared ETL and database layer: RTE / SYNOP / ENTSO-E / ERA5 extraction into the hourly SQLite master."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "SQLAlchemy>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "rapidfuzz>=3.5",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["pricemodeling*"]
